--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -223,108 +223,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js" integrity="sha512-VHsNaV1C4XbgKSc2O0rZDmkUOhMKPg/rIi8abX9qTaVDzVJnrDGHFnLnCnuPmZ3cNi1nQJm+fzJtBbZU9yRCww==" crossorigin="anonymous"></script>
 {% endif %}
 <script src="{% static 'js/vue-awesome-swiper.js' %}"></script>
-<script type="text/javascript">
-    $("#home-slideshow").vegas({
-        slides: [
-            {% if home.image1 %}
-            { src: "{{ home.image1.url }}" },
-            {% endif %}
-            {% if home.image2 %}
-            { src: "{{ home.image2.url }}" },
-            {% endif %}
-            {% if home.image3 %}
-            { src: "{{ home.image3.url }}" },
-            {% endif %}
-        ],
-        transition: ['zoomOut', 'flash'],
-        delay: 10000,
-        shuffle: true,
-        transitionDuration: 2000,
-        overlay: "{% static '/js/overlays/03.png' %}"
-    });
-    $('.vegas-timer').addClass('d-none')
-    $('.vegas-content-scrollable').addClass('d-flex align-items-end justify-content-start p-md-5 py-5 px-4 w-100')
-
-
-    Vue.use(VueAwesomeSwiper)
-    const index = new Vue({
-        el: '#index',
-        store: store,
-        delimiters: ['[[', ']]'],
-        data (){
-            return {
-                swiperOptions: {
-                    grabCursor: true,
-                    loop: false,
-                    pagination: {
-                        el: '.swiper-pagination',
-                        dynamicBullets: true,
-                    },
-                    navigation: {
-                        nextEl: '.swiper-button-next',
-                        prevEl: '.swiper-button-prev'
-                    },
-                    breakpoints: {
-                        1200: {
-                            slidesPerView: 5,
-                            spaceBetween: 10
-                        },
-                        768: {
-                            slidesPerView: 4,
-                            spaceBetween: 10
-                        },
-                        320: {
-                            slidesPerView: 2,
-                            spaceBetween: 10
-                        },
-                    }
-                },
-                newArrivalProducts: [],
-                bestSellerProducts: [],
-                slideshowloading: true,
-            }
-        },
-        created(){
-            AOS.init();
-            this.slideshows();
-        },
-        updated(){
-            AOS.refreshHard();
-        },
-        mounted(){
-            
-        },
-        filters: {
-            currency: function(value){
-                if (!value) return ''
-                value = formatter.format(value)
-                return value
-            },
-        },
-        computed: {
-        },
-        methods: {
-            slideshows(){
-                Promise.all([
-                    fetch('api/all-products/slideshow/new-arrivals/').then(res => res.ok && res.json() || Promise.reject(res)),
-                    fetch('api/all-products/slideshow/best-sellers/').then(res => res.ok && res.json() || Promise.reject(res))
-                ])
-                .then(response => {
-                    this.newArrivalProducts = response[0];
-                    this.bestSellerProducts = response[1];
-                    setTimeout( function(){
-                        this.slideshowloading = false;
-                    }.bind(this), 1000);
-                })
-                .catch(function (error){
-                    console.log(error);
-                })
-            },
-            slideshowhover(e){
-            }
-            
-        }
-
-    });
-</script>
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock javascript %}
